Fixed menu on IE - items were too close together.
Former-commit-id: c309d7a7571d5fa16e37f409d222ab25bc0f9810

--- a/intermine/webapp/main/resources/webapp/webapp.css
+++ b/intermine/webapp/main/resources/webapp/webapp.css
@@ -180,8 +180,6 @@ table td {
   white-space: nowrap;
 }
 .links .menu-item {
-  padding-right: 5px;
-  padding-left: 5px;
   font-size: 11px;
   color: #999;
 }
